# Chatbot

./: .env  README.md  docker-compose.yml  postgres.txt  pyproject.toml  requirements.txt
app/: Chat_WithHistory.py  tempCodeRunnerFile.py
app/app/: chat_history.txt
backend/: chain.py  constants.py  ingest.py  ingest_local_file.py  ingest_local_model.py  main.py  tempCodeRunnerFile.py  test.py  test_backend_database.ipynb  test_backend_endpoint.ipynb
