[tool.poetry]
name = "chat-langchain"
version = "0.1.1"
description = ""
authors = ["chipAI"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.2"
langchain = ">=0.2.0"
langsmith =  ">=0.1.25"
langchain-community = ">=0.2.0"
langchain-openai = ">=0.1.0"
langchain-google-genai = ">=1.0.0"
langchain-anthropic = ">=0.2.0"
langchain-fireworks = ">0.1.1"
langserve = {extras = ["server"], version = ">0.2.0"}
fastapi = ">=0.103.1"
pydantic = ">=2.0"
uvicorn = ">=0.23.2"
beautifulsoup4 = ">=4.12.2"
weaviate-client = ">=4.0.0"
psycopg2 = ">=2.9.7"
lxml = ">=4.9.3"
voyageai = ">=0.1.4"
pillow = ">=10.2.0"
tiktoken = ">=0.5.2"
cohere = ">=4.45"

python-dotenv = ">=1.0.1"
gradio= ">=4.14.0" 
parse = ">=1.20.2"
chromadb = ">=0.5.0"
langchain-huggingface = ">=0.1.0"
langchain_chroma = ">=0.1.0"
ctransformers = ">=0.2.0"
unstructured = ">=0.15.0"
google-generativeai=">=0.7.0"



[tool.poetry.group.lint.dependencies]
ruff = "^0.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

psycopg2-binary
"unstructured[pdf]"